CTreeJavaCC/target/generated-sources/javacc/ru/vsu/cs/course3/compiler/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package ru.vsu.cs.course3.compiler;

import java.io.FileReader;
import java.io.InputStreamReader;
import java.io.Reader;
import java.util.*;

import ru.vsu.cs.course3.compiler.ast.*;

public class Parser implements ParserConstants {
        public static void main(String[] args) throws Exception {
            Reader input = args.length > 0 ? new FileReader(args[0]) : new InputStreamReader(System.in);
            Parser parser = new Parser(input);
            AstNode result = parser.start();
            result.printTree(System.out);
        }

  static final public ValueNode value() throws ParseException {Token val;
    if (jj_2_1(2)) {
      val = jj_consume_token(INT_VALUE);
    } else if (jj_2_2(2)) {
      val = jj_consume_token(FLOAT_VALUE);
    } else if (jj_2_3(2)) {
      val = jj_consume_token(STRING_VALUE);
    } else if (jj_2_4(2)) {
      val = jj_consume_token(TRUE);
    } else if (jj_2_5(2)) {
      val = jj_consume_token(FALSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new ValueNode(val.image);}
    throw new Error("Missing return statement in function");
}

  static final public IdentNode ident() throws ParseException {Token ident;
    ident = jj_consume_token(IDENT);
{if ("" != null) return new IdentNode(ident.image);}
    throw new Error("Missing return statement in function");
}

  static final public TypeNode type() throws ParseException {Token type;
    if (jj_2_6(2)) {
      type = jj_consume_token(INT);
    } else if (jj_2_7(2)) {
      type = jj_consume_token(CHAR);
    } else if (jj_2_8(2)) {
      type = jj_consume_token(BOOL);
    } else if (jj_2_9(2)) {
      type = jj_consume_token(FLOAT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new TypeNode(type.image);}
    throw new Error("Missing return statement in function");
}

  static final public List<ExprNode> params() throws ParseException {List<ExprNode> params = new ArrayList<>(); ExprNode e;
    if (jj_2_11(2)) {
      e = expr();
params.add(e);
      label_1:
      while (true) {
        if (jj_2_10(2)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(22);
        e = expr();
params.add(e);
      }
    } else {
      ;
    }
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
}

  static final public FuncCallNode funcCall() throws ParseException {IdentNode ident; List<ExprNode> params;
    ident = ident();
    jj_consume_token(23);
    params = params();
    jj_consume_token(24);
{if ("" != null) return new FuncCallNode(ident, params);}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode group() throws ParseException {ExprNode e;
    if (jj_2_12(2)) {
      e = value();
    } else if (jj_2_13(2)) {
      e = funcCall();
    } else if (jj_2_14(2)) {
      e = ident();
    } else if (jj_2_15(2)) {
      jj_consume_token(23);
      e = expr();
      jj_consume_token(24);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode mult() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = group();
    label_2:
    while (true) {
      if (jj_2_16(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_17(2)) {
        op = jj_consume_token(25);
      } else if (jj_2_18(2)) {
        op = jj_consume_token(26);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = group();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode add() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = mult();
    label_3:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_20(2)) {
        op = jj_consume_token(27);
      } else if (jj_2_21(2)) {
        op = jj_consume_token(28);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = mult();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode compare() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = add();
    label_4:
    while (true) {
      if (jj_2_22(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_23(2)) {
        op = jj_consume_token(29);
      } else if (jj_2_24(2)) {
        op = jj_consume_token(30);
      } else if (jj_2_25(2)) {
        op = jj_consume_token(31);
      } else if (jj_2_26(2)) {
        op = jj_consume_token(32);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = add();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode equality() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = compare();
    label_5:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_28(2)) {
        op = jj_consume_token(33);
      } else if (jj_2_29(2)) {
        op = jj_consume_token(34);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = compare();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode and() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = equality();
    label_6:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_6;
      }
      op = jj_consume_token(35);
      arg2 = equality();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode or() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = and();
    label_7:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_7;
      }
      op = jj_consume_token(36);
      arg2 = and();
arg1 = new BinaryOpNode(op.toString(), arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode expr() throws ParseException {ExprNode r;
    r = or();
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
}

  static final public AssignNode assignWithType() throws ParseException {TypeNode type = null;
    IdentNode ident = null;
    ExprNode exprRightSide, exprAssignee = null;
    AssignNode stmt = null;
    type = type();
    ident = ident();
    if (jj_2_32(2)) {
      jj_consume_token(37);
      exprRightSide = expr();
stmt = new AssignNode(type, ident, exprRightSide);
    } else if (jj_2_33(2)) {
      jj_consume_token(38);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("*", ident, exprRightSide);
                                      stmt = new AssignNode(type, ident, exprAssignee);
    } else if (jj_2_34(2)) {
      jj_consume_token(39);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("/", ident, exprRightSide);
                                    stmt = new AssignNode(type, ident, exprAssignee);
    } else if (jj_2_35(2)) {
      jj_consume_token(40);
      exprRightSide = add();
exprAssignee = new BinaryOpNode("-", ident, exprRightSide);
                                          stmt = new AssignNode(type, ident, exprAssignee);
    } else if (jj_2_36(2)) {
      jj_consume_token(41);
      exprRightSide = add();
exprAssignee = new BinaryOpNode("+", ident, exprRightSide);
                                        stmt = new AssignNode(type, ident, exprAssignee);
    } else if (jj_2_37(2)) {
      jj_consume_token(42);
exprRightSide = new IdentNode("1");
                exprAssignee = new BinaryOpNode("+", ident, exprRightSide);
                                              stmt = new AssignNode(type, ident, exprAssignee);
    } else if (jj_2_38(2)) {
      jj_consume_token(43);
exprRightSide = new IdentNode("1");
                  exprAssignee = new BinaryOpNode("-", ident, exprRightSide);
                                                stmt = new AssignNode(type, ident, exprAssignee);
    } else {
stmt = new AssignNode(type, ident);
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public AssignNode assignNoType() throws ParseException {IdentNode ident; ExprNode exprRightSide, exprAssignee; AssignNode stmt;
    ident = ident();
    if (jj_2_39(2)) {
      jj_consume_token(37);
      exprRightSide = expr();
stmt = new AssignNode(ident, exprRightSide);
    } else if (jj_2_40(2)) {
      jj_consume_token(38);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("*", ident, exprRightSide);
                                          stmt = new AssignNode(ident, exprAssignee);
    } else if (jj_2_41(2)) {
      jj_consume_token(39);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("/", ident, exprRightSide);
                                        stmt = new AssignNode(ident, exprAssignee);
    } else if (jj_2_42(2)) {
      jj_consume_token(40);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("-", ident, exprRightSide);
                                              stmt = new AssignNode(ident, exprAssignee);
    } else if (jj_2_43(2)) {
      jj_consume_token(41);
      exprRightSide = mult();
exprAssignee = new BinaryOpNode("+", ident, exprRightSide);
                                            stmt = new AssignNode(ident, exprAssignee);
    } else if (jj_2_44(2)) {
      jj_consume_token(42);
exprRightSide = new IdentNode("1");
                    exprAssignee = new BinaryOpNode("+", ident, exprRightSide);
                                                  stmt = new AssignNode(ident, exprAssignee);
    } else if (jj_2_45(2)) {
      jj_consume_token(43);
exprRightSide = new IdentNode("1");
                        exprAssignee = new BinaryOpNode("-", ident, exprRightSide);
                                                      stmt = new AssignNode(ident, exprAssignee);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public StmtNode funcCallOrAssign() throws ParseException {StmtNode stmt;
    if (jj_2_46(2)) {
      stmt = assignWithType();
    } else if (jj_2_47(2)) {
      stmt = assignNoType();
    } else if (jj_2_48(2)) {
      stmt = funcCall();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public WhileNode whileStmt() throws ParseException {ExprNode cond = null; StmtNode body = null;
    jj_consume_token(WHILE);
    jj_consume_token(23);
    cond = expr();
    jj_consume_token(24);
    if (jj_2_49(2)) {
      body = blockAndOneLineStmt();
    } else {
      ;
    }
{if ("" != null) return new WhileNode(cond, body);}
    throw new Error("Missing return statement in function");
}

  static final public ForNode forStmt() throws ParseException {StmtNode init = new StmtListNode();
                         ExprNode cond = new LiteralNode("true");
                         StmtNode step = new StmtListNode();
                         StmtNode body;
    jj_consume_token(FOR);
    jj_consume_token(23);
    if (jj_2_50(2)) {
      init = funcCallOrAssign();
    } else {
      ;
    }
    jj_consume_token(44);
    if (jj_2_51(2)) {
      cond = expr();
    } else {
      ;
    }
    jj_consume_token(44);
    if (jj_2_52(2)) {
      step = funcCallOrAssign();
    } else {
      ;
    }
    jj_consume_token(24);
    body = blockAndOneLineStmt();
{if ("" != null) return new ForNode(init, cond, step, body);}
    throw new Error("Missing return statement in function");
}

  static final public IfNode ifStmt() throws ParseException {ExprNode cond; StmtNode thenStmt; StmtNode elseStmt = null;
    jj_consume_token(IF);
    jj_consume_token(23);
    cond = expr();
    jj_consume_token(24);
    thenStmt = blockAndOneLineStmt();
    if (jj_2_53(2)) {
      jj_consume_token(ELSE);
      elseStmt = blockAndOneLineStmt();
    } else {
      ;
    }
{if ("" != null) return new IfNode(cond, thenStmt, elseStmt);}
    throw new Error("Missing return statement in function");
}

  static final public StmtNode blockStmt() throws ParseException {StmtNode stmt;
    if (jj_2_54(2)) {
      jj_consume_token(45);
      stmt = listStmt();
      jj_consume_token(46);
    } else if (jj_2_55(2)) {
      stmt = ifStmt();
    } else if (jj_2_56(2)) {
      stmt = whileStmt();
    } else if (jj_2_57(2)) {
      stmt = forStmt();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public StmtNode blockAndOneLineStmt() throws ParseException {StmtNode stmt;
    if (jj_2_58(2)) {
      stmt = funcCallOrAssign();
      jj_consume_token(44);
    } else if (jj_2_59(2)) {
      stmt = blockStmt();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public StmtNode listStmt() throws ParseException {List<StmtNode> list = new ArrayList<>();
    label_8:
    while (true) {
      if (jj_2_60(2)) {
        ;
      } else {
        break label_8;
      }
StmtNode stmt;
      stmt = blockAndOneLineStmt();
list.add(stmt);
    }
{if ("" != null) return new StmtListNode(list);}
    throw new Error("Missing return statement in function");
}

  static final public StmtNode program() throws ParseException {StmtNode program;
    program = listStmt();
    jj_consume_token(0);
{if ("" != null) return program;}
    throw new Error("Missing return statement in function");
}

  static final public AstNode start() throws ParseException {StmtNode program;
    program = program();
{if ("" != null) return program;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }
